# rustyphoenix

./: Cargo.toml  build.rs
src/: lib.rs
src/common/: address.rs  genesis_tx.rs  mod.rs  private_key.rs  public_key.rs  tx.rs
src/proto/: block.proto  blockHeader.proto  tx.proto
src/serialization/: block.rs  blockHeader.rs  mod.rs  network.rs  peer.rs  state.rs  tx.rs
src/util/: hash.rs
