[package]
name = "rustyphoenix"
version = "0.1.0"
authors = ["Josiah Evans <koreanhalo@gmail.com>"]

[build-dependencies]
protoc = "2.0.4"
protoc-rust = "2.0.4"
protobuf = "2.0.4"
protobuf-codegen-pure = "2.0.4"

[dependencies]
rust-base58 = "0.0.4"
protobuf = "2.0.4"
blake2-rfc = "0.2.18"
merkle = "1.7.0"
secp256k1 = "0.10.0"
bytes = "0.4.9"